--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>move_arm</name>
+  <name>path_planning</name>
   <version>0.0.0</version>
-  <description>The move_arm package</description>
+  <description>The path planning package for final project</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
